# shop-app

./: pyproject.toml
shop/: settings.py  urls.py
